# airspice

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile.ngshared  README.md  check_gemini.py  package-lock.json  package.json  pyproject.toml  qa_registry_check.py  qa_test_suite.py  run_capability_suite.py
.claude/: launch.json
.github/: pull_request_template.md
docs/: AIR_SPECIFICATION.md  DEVELOPMENT.md  NORTH_STAR.md  ORCHESTRATION.md  ai_agent_spec.md  api_spec.md  build_bench_abstraction.md  cli_spec.md  compiler_spec.md  convergence_ladder.md  diagnostics_spec.md  house_agent_design.md  ir_spec.md  mcp.md  project_spec.md  runner_spec.md  sim_errors.md  simulation_spec.md  testing_spec.md  validation_rules.md  xml_security.md
examples/: test_divider.xml
firmware/: config.h  empty.c  main.cpp
qa/: debug-setstate.mjs  diag-sim.mjs  gen-corpus.mjs  merge-results.mjs  run-circuits.mjs  triage.mjs
registry/: diagnostics.json
samples/: standard.bjt  test_library.lib
schemas/: air.xsd
scripts/: check_budgets.mjs  check_diagnostics.py  compare_reports.py  e2e_circuits.py  e2e_products.py  export_golden.py  fuzz_diff.mjs  fuzz_interop.mjs  gauntlet.py  guardrails.py  setup_branch_protection.ps1  sim_parity.mjs  tandem.py  tandem_apps.py  tandem_pid.py  validate_kicad.mjs
tests/: circuit_scenarios.py  firmware_projects.py  test_agent.py  test_build_specs.py  test_cli_flow.py  test_convergence_ladder.py  test_diagnostics_registry.py  test_e2e_agent.py  test_e2e_circuits.py  test_e2e_firmware_projects.py  test_emit_demo.py  test_firmware.py  test_firmware_intent_binding.py  test_firmware_source.py  test_fuzz_eval.py  test_fuzz_regressions.py  test_gui_hint.py  (+12 more)
(+306 files in other folders)
