[project]
name = "air-native-spice"
version = "0.1.0"
description = "CLI-first AI-native electronics XML IR compiler and simulator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
ai = ["openai>=1.0"]

[project.scripts]
air = "air.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "packages/core/src"}

[tool.setuptools.packages.find]
where = ["packages/core/src"]
