[project]
name = "air-native-spice"
version = "0.1.0"
description = "CLI-first AI-native electronics XML IR compiler and simulator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# `pip install -e ".[dev]"` must be sufficient to run the full pytest suite and
# the API/CLI locally. This list mirrors what CI installs (see .github/workflows/
# ci.yml, "Install package and test dependencies"): pytest (runner), fastapi +
# httpx (air.api + FastAPI TestClient), uvicorn (air.cli `serve`), python-dotenv
# (loads .env in the CLI and several tests). Keep the two in sync.
dev = [
    "pytest>=8.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
ai = ["openai>=1.0"]

[project.scripts]
air = "air.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "packages/core/src"}

[tool.setuptools.packages.find]
where = ["packages/core/src"]
